Remove ID attributes from HTML docs: everything except input

--- a/files/en-us/web/html/element/aside/index.html
+++ b/files/en-us/web/html/element/aside/index.html
@@ -64,7 +64,7 @@ browser-compat: html.elements.aside
 
 <h2 id="Examples">Examples</h2>
 
-<h3 id="Using_&lt;aside&gt;">Using &lt;aside&gt;</h3>
+<h3>Using &lt;aside&gt;</h3>
 
 <p>This example uses <code>&lt;aside&gt;</code> to mark up a paragraph in an article. The paragraph is only indirectly related to the main article content:</p>
 
@@ -83,7 +83,7 @@ browser-compat: html.elements.aside
   &lt;/p&gt;
 &lt;/article&gt;</pre>
 
-<p>{{EmbedLiveSample("Examples")}}</p>
+<p>{{EmbedLiveSample("Using_aside")}}</p>
 
 <h2 id="Specifications">Specifications</h2>
 
