--- a/files/en-us/web/html/element/canvas/index.html
+++ b/files/en-us/web/html/element/canvas/index.html
@@ -67,7 +67,7 @@ browser-compat: html.elements.canvas
 
 <p>You should provide alternate content inside the <code>&lt;canvas&gt;</code> block. That content will be rendered both on older browsers that don't support canvas and in browsers with JavaScript disabled.</p>
 
-<h3 id="Required_&lt;canvas&gt;_tag">Required &lt;/canvas&gt; tag</h3>
+<h3>Required &lt;/canvas&gt; tag</h3>
 
 <p>Unlike the {{HTMLElement("img")}} element, the {{HTMLElement("canvas")}} element <strong>requires</strong> the closing tag (<code>&lt;/canvas&gt;</code>).</p>
 
