--- a/files/en-us/web/html/element/heading_elements/index.html
+++ b/files/en-us/web/html/element/heading_elements/index.html
@@ -65,7 +65,7 @@ browser-compat: html.elements.h1
  <li>Use only one <code>&lt;h1&gt;</code> per page or view. It should concisely describe the overall purpose of the content.</li>
 </ul>
 
-<h3 id="multiple_h1">Multiple <code>&lt;h1&gt;</code> elements on one page</h3>
+<h3>Multiple <code>&lt;h1&gt;</code> elements on one page</h3>
 
 <p>Using more than one <code>&lt;h1&gt;</code> is allowed by the HTML specification, but is not considered a best practice. Using only one <code>&lt;h1&gt;</code> is beneficial for screenreader users.</p>
 
