--- a/files/en-us/web/html/element/iframe/index.html
+++ b/files/en-us/web/html/element/iframe/index.html
@@ -90,7 +90,7 @@ browser-compat: html.elements.iframe
  </dd>
  <dt>{{htmlattrdef("name")}}</dt>
  <dd>A targetable name for the embedded browsing context. This can be used in the <code>target</code> attribute of the {{HTMLElement("a")}}, {{HTMLElement("form")}}, or {{HTMLElement("base")}} elements; the <code>formtarget</code> attribute of the {{HTMLElement("input")}} or {{HTMLElement("button")}} elements; or the <code>windowName</code> parameter in the {{domxref("Window.open()","window.open()")}} method.</dd>
- <dt id="attr-referrer">{{htmlattrdef("referrerpolicy")}}</dt>
+ <dt>{{htmlattrdef("referrerpolicy")}}</dt>
  <dd>Indicates which <a href="/en-US/docs/Web/API/Document/referrer">referrer</a> to send when fetching the frame's resource:
  <ul>
   <li><code>no-referrer</code>: The {{HTTPHeader("Referer")}} header will not be sent.</li>
@@ -190,7 +190,7 @@ browser-compat: html.elements.iframe
 
 <h2 id="Examples">Examples</h2>
 
-<h3 id="Example1">A simple &lt;iframe&gt;</h3>
+<h3>A simple &lt;iframe&gt;</h3>
 
 <p>This example embeds the page at <a href="https://example.org">https://example.org</a> in an iframe.</p>
 
@@ -202,7 +202,7 @@ browser-compat: html.elements.iframe
 
 <h4 id="Result">Result</h4>
 
-<p>{{ EmbedLiveSample('Example1', 640,400)}}</p>
+<p>{{ EmbedLiveSample('A_simple_iframe', 640,400)}}</p>
 
 <h2 id="Accessibility_concerns">Accessibility concerns</h2>
 
