--- a/files/en-us/web/html/element/main/index.html
+++ b/files/en-us/web/html/element/main/index.html
@@ -11,7 +11,7 @@ browser-compat: html.elements.main
 ---
 <div>{{HTMLRef}}</div>
 
-<p>The <strong><code>&lt;main&gt;</code></strong> <a href="/en-US/docs/Web/HTML">HTML</a> element represents the dominant content of the {{HTMLElement("body")}} of a document. The main content area consists of content that is directly related to or expands upon the central topic of a document, or the central functionality of an application.</span></p>
+<p>The <strong><code>&lt;main&gt;</code></strong> <a href="/en-US/docs/Web/HTML">HTML</a> element represents the dominant content of the {{HTMLElement("body")}} of a document. The main content area consists of content that is directly related to or expands upon the central topic of a document, or the central functionality of an application.</p>
 
 <div>{{EmbedInteractiveExample("pages/tabbed/main.html","tabbed-shorter")}}</div>
 
@@ -33,7 +33,7 @@ browser-compat: html.elements.main
   </tr>
   <tr>
    <th scope="row">Permitted parents</th>
-   <td>Where <a href="/en-US/docs/Web/Guide/HTML/Content_categories#flow_content">flow content</a> is expected, but only if it is a <a href="https://html.spec.whatwg.org/multipage/grouping-content.html#hierarchically-correct-main-element" id="the-main-element:hierarchically-correct-main-element">hierarchically correct <code>main</code> element</a>.</td>
+   <td>Where <a href="/en-US/docs/Web/Guide/HTML/Content_categories#flow_content">flow content</a> is expected, but only if it is a <a href="https://html.spec.whatwg.org/multipage/grouping-content.html#hierarchically-correct-main-element">hierarchically correct <code>main</code> element</a>.</td>
   </tr>
   <tr>
    <th scope="row">Implicit ARIA role</th>
