--- a/files/en-us/web/html/element/portal/index.html
+++ b/files/en-us/web/html/element/portal/index.html
@@ -37,10 +37,10 @@ browser-compat: html.elements.portal
 <p>This element includes the <a href="/en-US/docs/Web/HTML/Global_attributes">global attributes</a>.</p>
 
 <dl>
-  <dt id="attr-referrer">{{htmlattrdef("referrerpolicy")}}</dt>
+  <dt>{{htmlattrdef("referrerpolicy")}}</dt>
   <dd>Sets the <a href="/en-US/docs/Web/HTTP/Headers/Referrer-Policy">referrer policy</a> to use when requesting the page at the URL given as the value of the <code>src</code> attribute.
   </dd>
-  <dt id="attr-src">{{htmlattrdef("src")}}</dt>
+  <dt>{{htmlattrdef("src")}}</dt>
   <dd>The URL of the page to embed.</dd>
 </dl>
 
