--- a/files/en-us/web/html/element/section/index.html
+++ b/files/en-us/web/html/element/section/index.html
@@ -68,9 +68,9 @@ browser-compat: html.elements.section
 
 <p>To reiterate, each <code>&lt;section&gt;</code> should be identified, typically by including a heading ({{HTMLElement('h1')}}-{{HTMLElement('h6')}} element) as a child of the <code>&lt;section&gt;</code> element, wherever possible. See below for examples of where you might see a <code>&lt;section&gt;</code> without a heading.</p>
 
-<h2 id="Example">Examples</h2>
+<h2>Examples</h2>
 
-<h3 id="simple_usage_example">Simple usage example</h3>
+<h3>Simple usage example</h3>
 
 <h4 id="Before">Before</h4>
 
@@ -87,7 +87,7 @@ browser-compat: html.elements.section
 &lt;/section&gt;
 </pre>
 
-<h3 id="using_a_section_without_a_heading">Using a section without a heading</h3>
+<h3>Using a section without a heading</h3>
 
 <p>Circumstances where you might see <code>&lt;section&gt;</code> used without a heading are typically found in web application/UI sections rather than in traditional document structures. In a document, it doesn't really make any sense to have a separate section of content without a heading to describe its contents. Such headings are useful for all readers, but particularly useful for users of assistive technologies like screenreaders, and they are also good for SEO.</p>
 
