--- a/files/en-us/web/html/element/strike/index.html
+++ b/files/en-us/web/html/element/strike/index.html
@@ -36,7 +36,7 @@ browser-compat: html.elements.strike
 &amp;lt;s&amp;gt;:	&lt;s&gt;Today's Special: Salmon&lt;/s&gt; SOLD OUT
 </pre>
 
-<p id="Result">The result of this code is:</p>
+<p>The result of this code is:</p>
 
 <p>{{EmbedLiveSample("Example")}}</p>
 
