--- a/files/en-us/web/html/element/time/index.html
+++ b/files/en-us/web/html/element/time/index.html
@@ -121,7 +121,7 @@ browser-compat: html.elements.time
 
 <p>{{EmbedLiveSample('Simple_example', 250, 60)}}</p>
 
-<h3 id="Datetime_example"><code>datetime</code> example</h3>
+<h3><code>datetime</code> example</h3>
 
 <h4 id="HTML_2">HTML</h4>
 
@@ -131,7 +131,7 @@ browser-compat: html.elements.time
 
 <h4 id="Output_2">Output</h4>
 
-<p>{{EmbedLiveSample('Datetime_example', 250, 60)}}</p>
+<p>{{EmbedLiveSample('datetime_example', 250, 60)}}</p>
 
 <h2 id="Specifications">Specifications</h2>
 
