--- a/files/en-us/web/html/global_attributes/itemprop/index.html
+++ b/files/en-us/web/html/global_attributes/itemprop/index.html
@@ -192,7 +192,7 @@ browser-compat: html.global_attributes.itemprop
 
 <h3 id="Same_structured_data_marked_up_in_two_different_ways">Same structured data marked up in two different ways</h3>
 
-<p id="There_is_no_semantic_difference_between_the_following_two_examples">There is no semantic difference between the following two examples</p>
+<p>There is no semantic difference between the following two examples</p>
 
 <pre class="brush: html">&lt;figure&gt;
  &lt;img src="castle.jpeg"&gt;
