--- a/files/en-us/web/html/inline_elements/index.html
+++ b/files/en-us/web/html/inline_elements/index.html
@@ -14,7 +14,7 @@ tags:
 
 <p>HTML (<strong>Hypertext Markup Language</strong>) elements historically were categorized as either "block-level" elements or "inline-level" elements. Since this is a presentational characteristic it is nowadays specified by CSS in the <a href="/en-US/docs/Web/CSS/CSS_Flow_Layout">Flow Layout</a>.</p>
 
-<p>Inline elements are those which only occupy the space bounded by the tags defining the element, instead of breaking the flow of the content.</p> 
+<p>Inline elements are those which only occupy the space bounded by the tags defining the element, instead of breaking the flow of the content.</p>
 
 <div class="note">
 <p>An inline element does not start on a new line and only takes up as much width as necessary.</p>
@@ -97,7 +97,7 @@ the block-level element's influence.&lt;/div&gt;</pre>
  <dd>By default, inline elements do not force a new line to begin in the document flow. Block elements, on the other hand, typically cause a line break to occur (although, as usual, this can be changed using CSS).</dd>
 </dl>
 
-<h2 id="Elements">List of "inline" elements</h2>
+<h2>List of "inline" elements</h2>
 
 <p>The following elements are inline by default (although block and inline elements are no longer defined in HTML 5, use <a href="/en-US/docs/Web/Guide/HTML/Content_categories">content categories</a> instead):</p>
 
