--- a/files/en-us/web/html/link_types/index.html
+++ b/files/en-us/web/html/link_types/index.html
@@ -110,7 +110,7 @@ browser-compat: html.elements.link.rel
    <td><em>None.</em></td>
   </tr>
   <tr>
-   <td id="icon"><code>icon</code></td>
+   <td><code>icon</code></td>
    <td>Defines a resource for representing the page in the user interface, usually an icon (auditory or visual). In the browser, it is usually referred to as the {{glossary("Favicon", "favicon")}}.<br>
     <br>
     If there are multiple <code>&lt;link rel="icon"&gt;</code>s, the browser uses their {{HTMLAttrxRef("media","link")}}, {{HTMLAttrxRef("type","link")}}, and {{HTMLAttrxRef("sizes","link")}} attributes to select the most appropriate icon. If several icons are equally appropriate, the last one is used. If the most appropriate icon is later found to be inappropriate, for example because it uses an unsupported format, the browser proceeds to the next-most appropriate, and so on.<br>
