--- a/files/en-us/web/html/microformats/index.html
+++ b/files/en-us/web/html/microformats/index.html
@@ -24,7 +24,7 @@ tags:
 
 <p>There are <a href="https://microformats.org/wiki/microformats2#Parsers">open source parsing libraries for most languages</a> for microformats2.</p>
 
-<h2 id="How_Microformats_Work"><span id="How_do_Microformats_Work">How Microformats Work</span></h2>
+<h2>How Microformats Work</h2>
 
 <p>An author of a webpage can add microformats to their HTML. For example if they wanted to identify themselves they could use an <a href="https://microformats.org/wiki/h-card">h-card</a> such as:</p>
 
