--- a/files/en-us/web/html/quirks_mode_and_standards_mode/index.html
+++ b/files/en-us/web/html/quirks_mode_and_standards_mode/index.html
@@ -16,7 +16,7 @@ tags:
 
 <p>There are now three modes used by the layout engines in web browsers: quirks mode, almost standards mode, and full standards mode. In <strong>quirks mode</strong>, layout emulates nonstandard behavior in Navigator 4 and Internet Explorer 5. This is essential in order to support websites that were built before the widespread adoption of web standards. In <strong>full standards mode</strong>, the behavior is (hopefully) the behavior described by the HTML and CSS specifications. In <strong>almost standards mode</strong>, there are only a very small number of quirks implemented.</p>
 
-<h2 id="How_does_Mozilla_determine_which_mode_to_use.3F">How do browsers determine which mode to use?</h2>
+<h2>How do browsers determine which mode to use?</h2>
 
 <p>For <a href="/en-US/docs/HTML">HTML</a> documents, browsers use a DOCTYPE in the beginning of the document to decide whether to handle it in quirks mode or standards mode. To ensure that your page uses full standards mode, make sure that your page has a DOCTYPE like in this example:</p>
 
