--- a/files/en-us/web/html/element/base/index.html
+++ b/files/en-us/web/html/element/base/index.html
@@ -72,7 +72,7 @@ browser-compat: html.elements.base
 
 <h2 id="Usage_notes">Usage notes</h2>
 
-<h3 id="Multiple_&lt;base&gt;_elements">Multiple &lt;base&gt; elements</h3>
+<h3>Multiple &lt;base&gt; elements</h3>
 
 <p>If multiple <code>&lt;base&gt;</code> elements are used, only the first <code>href</code> and first <code>target</code> are obeyed — all others are ignored.</p>
 
