--- a/files/en-us/web/html/element/button/index.html
+++ b/files/en-us/web/html/element/button/index.html
@@ -179,7 +179,7 @@ browser-compat: html.elements.button
  <li><a href="https://axesslab.com/hand-tremors/">Hand tremors and the giant-button-problem - Axess Lab</a></li>
 </ul>
 
-<h3 id="ARIA">ARIA state information</h3>
+<h3>ARIA state information</h3>
 
 <p>To describe the state of a button the correct ARIA attribute to use is <code>aria-pressed</code> and not <code>aria-checked</code> or <code>aria-selected</code>. To find out more read  the information about the <a href="/en-US/docs/Web/Accessibility/ARIA/Roles/button_role">ARIA button role</a>.</p>
 
