--- a/files/en-us/web/html/element/dfn/index.html
+++ b/files/en-us/web/html/element/dfn/index.html
@@ -76,7 +76,7 @@ browser-compat: html.elements.dfn
 <p>If the <code>&lt;dfn&gt;</code> element has a <code>title</code> attribute, it <em>must</em> contain the term being defined and no other text.</p>
 </div>
 
-<h3 id="Links_to_&lt;dfn&gt;_elements">Links to <code>&lt;dfn&gt;</code> elements</h3>
+<h3>Links to <code>&lt;dfn&gt;</code> elements</h3>
 
 <p>If you include an {{htmlattrxref("id")}} attribute on the <code>&lt;dfn&gt;</code> element, you can then link to it using {{HTMLElement("a")}} elements. Such links should be uses of the term, with the intent being that the reader can quickly navigate to the term's definition if they're not already aware of it, by clicking on the term's link.</p>
 
