--- a/files/en-us/web/html/block-level_elements/index.html
+++ b/files/en-us/web/html/block-level_elements/index.html
@@ -21,7 +21,7 @@ tags:
 
 <p>The following example demonstrates the block-level element's influence:</p>
 
-<h2 id="Block-level_elements">Block-level elements</h2>
+<h2>Block-level elements</h2>
 
 <h3 id="HTML">HTML</h3>
 
